--- a/index.html
+++ b/index.html
@@ -1904,26 +1904,37 @@ ok.onclick = function(){
     });
   }
 })();</script><script>
-// LOAD_AND_RENDER_QUESTIONS
+// LOAD_AND_RENDER_QUESTIONS v2 (safe IDs + stronger progress update)
 (function(){
   function q(sel, root){ return (root||document).querySelector(sel); }
   function all(sel, root){ return Array.prototype.slice.call((root||document).querySelectorAll(sel)); }
+  var STEPS = ["welcome","intro","q1","q2","score","peer","done","finish"];
+
   function setProgress(step){
-    var bar = document.getElementById('dotbar');
-    if (!bar) return;
+    var bar = q('#dotbar'); if (!bar) return;
     var dots = all('.sar-dot', bar);
-    var STEPS = ["welcome","intro","q1","q2","score","peer","done","finish"];
     var idx = Math.max(0, STEPS.indexOf(step));
     dots.forEach(function(d){ d.classList.remove('done','current'); });
-    dots.forEach(function(d, i){ if (i <= idx) d.classList.add('done'); });
+    dots.forEach(function(d,i){ if (i <= idx) d.classList.add('done'); });
     if (dots[idx]) dots[idx].classList.add('current');
   }
 
-  function renderList(target, items){
+  function makeId(it, idx, base){
+    var id = (it && it.id ? String(it.id) : "").trim();
+    if (!id){
+      var s = (it && it.statement ? String(it.statement) : "");
+      var m = s.match(/^\s*(\d+)/);
+      if (m) id = "q"+m[1];
+      else id = "q"+(base + idx + 1);
+    }
+    return id.replace(/[^\w\-]/g, "_");
+  }
+
+  function renderList(target, items, base){
     var host = q('#'+target);
     if (!host) return;
-    var html = items.map(function(it){
-      var id = it.id || '';
+    var html = items.map(function(it, idx){
+      var id = makeId(it, idx, base);
       var stmt = it.statement || '';
       var sub  = it.subtext || '';
       var radios = [1,2,3,4,5].map(function(v){
@@ -1938,18 +1949,19 @@ ok.onclick = function(){
     host.innerHTML = html;
   }
 
-  fetch("./questions.json?v="+Date.now(), {cache:"no-store"}).then(function(r){ return r.json(); }).then(function(qs){
-    if (!Array.isArray(qs)) return;
-    var q1 = qs.slice(0, 18);
-    var q2 = qs.slice(18);
-    renderList("q1List", q1);
-    renderList("q2List", q2);
-  }).catch(function(e){ console.error("questions load failed", e); });
+  fetch("./questions.json?v="+Date.now(), {cache:"no-store"})
+    .then(function(r){ return r.json(); })
+    .then(function(qs){
+      if (!Array.isArray(qs)) return;
+      var q1 = qs.slice(0, 18);
+      var q2 = qs.slice(18);
+      renderList("q1List", q1, 0);
+      renderList("q2List", q2, 18);
+    })
+    .catch(function(e){ console.error("questions load failed", e); });
 
-  // Navigation: back/next buttons
   function go(step){
-    var pages = all('.sar-page');
-    pages.forEach(function(p){ p.classList.remove('active'); });
+    all('.sar-page').forEach(function(p){ p.classList.remove('active'); });
     var pg = q('.sar-page[data-step="'+step+'"]');
     if (pg){ pg.classList.add('active'); setProgress(step); }
   }
@@ -1958,57 +1970,25 @@ ok.onclick = function(){
   if (introNext){
     introNext.addEventListener('click', function(){ setTimeout(function(){ go('q1'); }, 0); });
   }
-
   var q1Back = q('.sar-page[data-step="q1"] #q1Back');
   var q1Next = q('.sar-page[data-step="q1"] #q1Next');
   if (q1Back){ q1Back.addEventListener('click', function(){ go('intro'); }); }
-  if (q1Next){ q1Next.addEventListener('click', function(){ go('q2'); }); }
+  if (q1Next){ q1Next.addEventListener('click', function(){ go('q2'); setProgress('q2'); }); }
 
   var q2Back = q('.sar-page[data-step="q2"] #q2Back');
   var q2Next = q('.sar-page[data-step="q2"] #q2Next');
   if (q2Back){ q2Back.addEventListener('click', function(){ go('q1'); }); }
   if (q2Next){ q2Next.addEventListener('click', function(){ go('score'); }); }
-})();</script><script>
-// Q1_ALL_ANSWERED_ENABLE_NEXT
-(function(){
-  function q(sel, root){ return (root||document).querySelector(sel); }
-  function all(sel, root){ return Array.prototype.slice.call((root||document).querySelectorAll(sel)); }
-  function countAnsweredQ1(){
-    var rows = all('#q1List .q-item');
-    var answered = rows.filter(function(row){
-      var qid = row.getAttribute('data-qid');
-      if (!qid) return false;
-      var checked = q('input[name="rate_'+qid+'"]:checked', row);
-      return !!checked;
-    }).length;
-    return { answered: answered, total: rows.length };
-  }
-  function update(){
-    var btn = q('.sar-page[data-step="q1"] #q1Next');
-    if (!btn) return;
-    var stat = countAnsweredQ1();
-    // Expecting 18 questions on page 1
-    btn.disabled = !(stat.total >= 18 && stat.answered >= 18);
-  }
-  function attach(){
-    var mount = q('#q1List');
-    if (!mount) return;
-    // initialize disabled
-    var btn = q('.sar-page[data-step="q1"] #q1Next');
-    if (btn) btn.disabled = true;
-    mount.addEventListener('change', function(e){
-      var t = e.target;
-      if (t && t.matches('input[type="radio"]')){
-        update();
-      }
-    });
-    // in case the list was already rendered with some selections
-    update();
-  }
-  if (document.readyState === "loading"){
-    document.addEventListener("DOMContentLoaded", attach);
-  } else {
-    attach();
-  }
+
+  // Observer to force dotbar to reflect the active page (covers any route changes)
+  var lastStep = null;
+  setInterval(function(){
+    var active = q('.sar-page.active');
+    var step = active ? active.getAttribute('data-step') : null;
+    if (step && step !== lastStep){
+      setProgress(step);
+      lastStep = step;
+    }
+  }, 200);
 })();</script></body>
 </html>
